gateway-adapter的网关信息能在云上显示

--- a/cmd/gateway-adapter/res/configuration.toml
+++ b/cmd/gateway-adapter/res/configuration.toml
@@ -36,7 +36,9 @@ File = './logs/gateway-adapter.log'
 Address = '119.3.36.199'
 Port = 3002
 Protocol = 'TCP'
-Topic = '/gateway-adapter'
 Publisher = 'gateway-adapter-go'
 User = 'admin'
 Password = 'mingdu2018'
+
+[Hardware]
+File = '/mnt/host/hardware.json'
